--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Cargo Format Check
         run: cargo fmt -- --check
 
+      - name: Cargo Clippy Check
+        run: cargo clippy --all-features --all-targets -- -D warnings
+
       - name: Cargo Sort Check
         run: cargo install cargo-sort --debug && cargo-sort --check --workspace
